<resources>
    <string name="app_name">安卓Demo_朱</string>
    <string name="self_define_view">我的自定义控件</string>
    <string name="view_pager_indicator">ViewPagerIndicator(滑动指示器)</string>
    <string name="my_watch_view">MyWatchView(自定义表盘)</string>
    <string name="line_chart">LineChart(折线图)</string>
    <string name="circle_scale_view">CircleScaleView(圆环比例图)</string>
    <string name="assist_use">辅助应用</string>
    <string name="text_font_set">TextView字体设置</string>
    <string name="text_float_button_show">显示悬浮控件</string>
    <string name="top_slide_menu">DropdownLayout(下拉抽屉式控件)</string>
    <string name="text_expand_textview">ExpandTextView(可扩展TextView)</string>
    <string name="widget_extends_use">控件拓展应用</string>
    <string name="recyclerview_item_drag">RecyclerView Item拖拽效果</string>
    <string name="list_mode">List模式</string>
    <string name="grid_mode">Grid模式</string>
    <string name="to_expand_hint">展开</string>
    <string name="to_shrink_hint">收起</string>
    <string name="material_design">MaterialDesign组件</string>
    <string name="collapsing_tool_bar">CollapsingToolBar</string>
    <string name="text_horizontal_video_show">HorizontalVideoShow</string>
    <string name="coordinator_layout">CoordinatorLayout布局应用</string>
    <string name="socket_test">socket测试</string>
    <string name="text_danmu_test">弹幕测试应用</string>
    <string name="text_diff_property">一个TextView不同属性内容展示</string>
    <string name="svg_use">矢量图SVG使用</string>
    <string name="text_float_btn">应用悬浮窗</string>
</resources>
