<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">
    <Button
        android:id="@+id/btn_recycler_drag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:text="@string/recyclerview_item_drag"/>
    <Button
        android:id="@+id/btn_danmu_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:text="@string/text_danmu_test"/>
    <Button
        android:id="@+id/btn_diff_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:text="@string/text_diff_property"/>
    <Button
        android:id="@+id/btn_svg_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:text="@string/svg_use"/>

    <Button
        android:id="@+id/btn_float_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:text="@string/text_float_btn"/>
</LinearLayout>
