<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_view_pager_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:onClick="onClick"
                android:text="@string/view_pager_indicator"/>
            <Button
                android:id="@+id/btn_my_watch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:onClick="onClick"
                android:layout_marginTop="5dp"
                android:text="@string/my_watch_view"/>
            <Button
                android:id="@+id/btn_line_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:onClick="onClick"
                android:layout_marginTop="5dp"
                android:text="@string/line_chart"/>
            <Button
                android:id="@+id/btn_circle_scale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:onClick="onClick"
                android:layout_marginTop="5dp"
                android:text="@string/circle_scale_view"/>
            <Button
                android:id="@+id/btn_top_slide_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:onClick="onClick"
                android:layout_marginTop="5dp"
                android:text="@string/top_slide_menu"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
